# cmsrust

./: .gitignore  Cargo.toml  README.md  build_error.log.txt  docker-compose.yml  env.example  tmp.txt
migration/: Cargo.toml
migration/src/: lib.rs  m20260312_131843_create_users_table.rs  m20260312_132015_create_posts_table.rs  m20260312_132126_create_categories_table.rs  m20260312_140819_create_tags_table.rs  m20260312_141045_create_post_relations.rs  m20260312_141453_create_comments_table.rs  m20260312_141646_create_media_table.rs  migrator.rs
src/: main.rs
src/config/: database.rs
src/entities/: category.rs  comment.rs  media.rs  mod.rs  post.rs  post_category.rs  post_revision.rs  post_tag.rs  prelude.rs  tag.rs  user.rs
src/handlers/: admin.rs  auth.rs  auth.rs_test  category.rs  mod.rs  posts.rs  theme.rs  user.rs
src/middleware/: auth.rs
src/services/: category_service.rs  comment_service.rs  mod.rs  post_service.rs  user_service.rs
src/utils/: jwt.rs  response.rs
themes/default/: theme.json
themes/default/static/: login.css  style.css
themes/default/static/admin/: base.css
themes/default/templates/: base.html  index.html  login.html  register.html  single.html
themes/default/templates/admin/: base.html  dashboard.html  post_form.html  profile.html
