[package]
name = "cmsrust"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.8.8", features = ["macros"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace", "fs"] }
tower-cookies = { version = "0.11.0", features = ["private"] }
axum-extra = { version = "0.12.2", features = ["cookie"] }
cookie = "0.18"
hyper = "1.0"
futures = "0.3"

tera = "1.19"

# Database & ORM
sea-orm = { version = "1.1.20", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "with-chrono",
    "with-uuid"
] }
sea-orm-migration = "1.1.20"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.8"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
validator = { version = "0.18", features = ["derive"] }
thiserror = "1.0"

# File handling
multer = "3.0"
image = "0.25"

[dev-dependencies]
axum-test = "19.1.1"
mockall = "0.14"
