# migrations/Cargo.toml
[package]
name = "migrations"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Синхронизируйте версии с основным проектом!
sea-orm-migration = { version = "1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls"
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Ссылка на ваш основной крейт (если нужны сущности)
cmsrust = { path = "..", optional = true }
